src/objects/GitHub_Repos__x.object
<CustomObject>
    <description>GitHub Repos</description>
    <externalDataSource>GitHub_Repos</externalDataSource>
    <externalName>GitHub Repos</externalName>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stars__c</fullName>
        <description>Stars</description>
        <externalDeveloperName>Stars</externalDeveloperName>
        <label>Stars</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GitHub Repos</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>GitHub Repos</pluralLabel>
</CustomObject>